--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         <h4>My-portfolio</h4><br>
                        <p>Hi, I'm <span>Vishal Srivastav</span> <br>from Kushinagar <br>Uttar Pardesh. </p>
             
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://vishal-srivastav1.github.io/my-portfolio/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 
