--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                                 <a href="https://github.com/Vishal-Srivastav1"><i class="fa-brands fa-github"></i></a>
                                 
                             </div>
-                            <a href="images/Vishal srivastav CV.pdf" download class="btn btn2">Download Cv</a>
+                            <a href="" download class="btn btn2">Download Cv</a>
                         </div>
                         <div class="contact-right">
                             <form name="submit-to-google-sheet">
